# zarpa

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  CMakeLists_SFML_STATIC.cmake  README.md
doc/: juego_de_instrucciones.md
doc/tutorial/: tutorial1_es.md
include/ini/: ini.hpp
src/: devtools.cpp  enum_bitmask.hpp  main.cpp  parser.cpp  reflection.hpp  utilities.cpp  zarpa.hpp  zarpa_types.hpp
src/classes/: base.hpp  description.hpp  entity.hpp  error.cpp  error.hpp  fakeserver.hpp  infos.hpp  ini_description.cpp  ini_description.hpp  instructioninfo.cpp  instructioninfo.hpp  location.cpp  location.hpp  message.cpp  message.hpp  object.hpp  phrase.hpp  resource_manager.cpp  resource_manager.hpp  script.core.cpp  script.functions.cpp  script.hpp  script.instructions.cpp  sound.hpp  variable.hpp  vocabulary.hpp  vocabularylist.hpp  zarpalist.hpp  zone.hpp
src/gui/: gui.core.cpp  gui.functions.cpp  gui.hpp  gui.loaddata.cpp  icon.hpp  ttf_consola.hpp  ttf_descriptions_default.hpp  ttf_messages_default.hpp
tutorial/: config.ini  entities.ini  images.ini  locations.ini  objects.ini  sounds.ini  variables.ini
tutorial/assets/themes/: theme_TEMPLATE.ini  theme_default.ini
tutorial/code/: after_desc.zs  after_prompt.zs
tutorial/es/: descriptions.ini  messages.ini  vocabulary.ini
tutorial/system/: _LEEME.txt  _README.txt  entities.ini  instructions.ini  locations.ini  variables.ini
tutorial/system/code/: after_prompt.zs
tutorial/system/es/: messages.ini  vocabulary.ini
